// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JavaRuntimesCard expect to render 1`] = `
<ReportCard
  skipBullseye={true}
  title={
    <span>
      <span>
        Oracle Java runtime information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
>
  <Grid
    hasGutter={true}
    xl={6}
  >
    <GridItem>
      <Bullseye>
        <FancyChartDonut
          chartProps={
            Object {
              "subTitle": "Total",
              "title": "45",
            }
          }
          data={
            Array [
              Object {
                "extraData": 10,
                "label": "VendorA JDK 8",
                "value": 0.2222222222222222,
              },
              Object {
                "extraData": 15,
                "label": "VendorB JDK 8",
                "value": 0.3333333333333333,
              },
              Object {
                "extraData": 20,
                "label": "VendorB JDK 11",
                "value": 0.4444444444444444,
              },
            ]
          }
          tickFormat={[Function]}
          tooltipFormat={[Function]}
        />
      </Bullseye>
    </GridItem>
    <GridItem>
      <Bullseye>
        <SolidCard
          title="Oracle JDKs that can be replaced with Open JDK: 8"
          width={510}
        />
      </Bullseye>
    </GridItem>
  </Grid>
</ReportCard>
`;

exports[`JavaRuntimesCard expect to render empty card when no java runtimes 1`] = `
<Component
  cardTitle={
    <span>
      <span>
        Oracle Java runtime information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
  description="No instances of Oracle JDKs have been discovered."
  message="No instances found"
/>
`;

exports[`JavaRuntimesCard expect to render empty card when undefined reportWorkloadSummary 1`] = `
<Component
  cardTitle={
    <span>
      <span>
        Oracle Java runtime information
      </span>
       
      <span>
        <Tooltip
          appendTo={[Function]}
          aria="describedby"
          boundary="window"
          className=""
          content={
            <div>
              See the Workload migration inventory for details
            </div>
          }
          distance={15}
          enableFlip={true}
          entryDelay={500}
          exitDelay={500}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          id=""
          isAppLauncher={false}
          isContentLeftAligned={false}
          isVisible={false}
          maxWidth="18.75rem"
          position="top"
          tippyProps={Object {}}
          trigger="mouseenter focus"
          zIndex={9999}
        >
          <HelpIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </Tooltip>
      </span>
    </span>
  }
  description="No instances of Oracle JDKs have been discovered."
  message="No instances found"
/>
`;
